syntax = "proto3";
 
option go_package="./;raftrpc";

/* 
    this rpc is only for Raft consistency between nodes
*/

service Raft {
  rpc AppendEntriesInRaft (AppendEntriesInRaftRequest) returns (AppendEntriesInRaftResponse) {}
  rpc RequestVote (RequestVoteRequest) returns (RequestVoteResponse) {}
}
 
message AppendEntriesInRaftRequest{
  int32 Term = 1;
  int32 LeaderId = 2; 
  int32 PrevLogIndex = 3;
  int32 PrevLogTerm = 4;
  bytes Entries = 5;
  int32 LeaderCommit = 6;
}

message AppendEntriesInRaftResponse{
  int32 Term = 1;
  bool Success = 2;
  int32 ConflictIndex = 3;
  int32 ConflictTerm = 4;
}

message RequestVoteRequest{
  int32 Term = 1;
  int32 CandidateId = 2;
  int32 LastLogIndex = 3;
  int32 LastLogTerm = 4;
}

message RequestVoteResponse{
  int32 Term = 1;
  bool VoteGranted = 2;
}
